Support Per-floppy Device Drive Types
- Floppy devices are now configured per-device so that each floppy drive can be different (e.g., first floppy is 3.5" and second floppy is 5.25").
- Removed need to use termination signal on floppy sector I/O.

Addresses issue #318

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -4,6 +4,7 @@ Version 3.3
 - A?C: Preliminary support for Z80-Retro
 - A?C: Support for SD PIO
 - A?C: Support for Z80-Retro SD interface
+- WBW: Support per-drive floppy configuration
 
 Version 3.2.1
 -------------
