Z280 Workaround for VGARC
Z280 is having an issue with OTDR instruction when loading the font for VGARC.  For now, the use of OTDR has been eliminated.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -5,6 +5,7 @@ Version 3.3
 - A?C: Support for SD PIO
 - A?C: Support for Z80-Retro SD interface
 - WBW: Support per-drive floppy configuration
+- WBW: Support for Bill Shen's VGARC
 
 Version 3.2.1
 -------------
