--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -6,6 +6,7 @@ Version 3.3
 - A?C: Support for Z80-Retro SD interface
 - WBW: Support per-drive floppy configuration
 - WBW: Support for Bill Shen's VGARC
+- WBW: Support for MG014 Parallel Port module + printer
 
 Version 3.2.1
 -------------
