Preliminary IMM Driver (Zip Drive)
Thanks to Alan Cox for inspiring this.  Much of the code was usurped from Fuzix.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -7,6 +7,7 @@ Version 3.3
 - WBW: Support per-drive floppy configuration
 - WBW: Support for Bill Shen's VGARC
 - WBW: Support for MG014 Parallel Port module + printer
+- WBW: Support for Zip Drive on emm interface (much inspiration from Alan Cox)
 
 Version 3.2.1
 -------------
