Preliminary Support for ESP32 Nhyodyne Module
- Initial console support for Dan Werner's ESP32 Module

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -15,6 +15,7 @@ Version 3.3
 - JBL: Added RCZ80 configuration for ColecoVision
 - WBW: Support for Z180 running interrupt mode 1
 - WBW: Preliminary support for S100 Computers Z180
+- WBW: Preliminary support for Dan Werner's ESP32 MBC Module
 
 Version 3.2.1
 -------------
