--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -4,6 +4,7 @@ NOTE: Changes require HBIOS/CBIOS/Apps sync, version bump to 3.4 to ensure integ
 - WBW: Device type number moved from upper nibble to full byte
 - A?C: Support for EP ITX-Mini Z180 Platform
 - M?R: Significant improvement in User Guide document
+- J?P: Preliminary support for Monsputer (MON)
 
 
 Version 3.3
