--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -7,6 +7,7 @@ Version 3.5
 - WBW: Allow front panel LED/Switch bits to be inverted in config
 - WBW: Add API to expose application banks available
 - WBW: Added console takeover at boot loader prompt
+- L?N: Fixed Propeller font vertical line character to align properly
 
 Version 3.4
 -----------
