--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -8,6 +8,7 @@ Version 3.5
 - WBW: Add API to expose application banks available
 - WBW: Added console takeover at boot loader prompt
 - L?N: Fixed Propeller font vertical line character to align properly
+- L?S: EF9345 video display controller driver
 
 Version 3.4
 -----------
