--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -9,6 +9,7 @@ Version 3.5
 - WBW: Added console takeover at boot loader prompt
 - L?N: Fixed Propeller font vertical line character to align properly
 - L?S: EF9345 video display controller driver
+- WBW: Added Cowgol disk image based on the work of Ladislau Szilagyi
 
 Version 3.4
 -----------
