--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -11,6 +11,7 @@ Version 3.5
 - L?S: EF9345 video display controller driver
 - WBW: Added Cowgol disk image based on the work of Ladislau Szilagyi
 - WBW: Added support for CP/NET on Duodyne Disk I/O
+- DDW: Added support for Duodyne Media board
 
 Version 3.4
 -----------
