--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -14,6 +14,7 @@ Version 3.5
 - DDW: Added support for Duodyne Media board
 - WBW: Auto restore TMS video on user reset (CP/M warm boot)
 - L?B: Added support for NABU w/ RomWBW Option Board
+- M?P: Reorganization of Doc directory introducing subfolders
 
 Version 3.4
 -----------
