--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -15,6 +15,7 @@ Version 3.5
 - WBW: Auto restore TMS video on user reset (CP/M warm boot)
 - L?B: Added support for NABU w/ RomWBW Option Board
 - M?P: Reorganization of Doc directory introducing subfolders
+- WBW: Upgraded BBCBASIC to v5.00
 
 Version 3.4
 -----------
