--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -16,6 +16,7 @@ Version 3.5
 - L?B: Added support for NABU w/ RomWBW Option Board
 - M?P: Reorganization of Doc directory introducing subfolders
 - WBW: Upgraded BBCBASIC to v5.00
+- W?S: Updated FLASH utility to v1.3.9
 
 Version 3.4
 -----------
