Enhanced TIMER App from MartinR
- MartinR has enhanced the TIMER application to display output in decimal.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -18,6 +18,7 @@ Version 3.5
 - WBW: Upgraded BBCBASIC to v5.00
 - W?S: Updated FLASH utility to v1.3.9
 - WBW: Support RCBus PS/2 Keyboard (EP/Sally)
+- M?R: Update Timer app to display output in decimal
 
 Version 3.4
 -----------
