Support for DS1305 RTC on S100 FPGA Z80

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -24,6 +24,7 @@ Version 3.5
 - WBW: Added preliminary support for S100 FPGA Z80 SD Cards
 - M?R: Consolidated ROM Applications document into the Applications document
 - M?R: Reviewed and substantially improved the Applications document
+- WBW: Added support for DS1305 RTC on S100 FPGA Z80
 
 Version 3.4
 -----------
