--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -27,6 +27,7 @@ Version 3.5
 - WBW: Added support for DS1305 RTC on S100 FPGA Z80
 - WBW: Added support for Les Bird's RCBus Graphics/Sound/Joystick module
 - WBW: Added support for Les Bird's Dual 16C550 UART module
+- WBW: Refactor UART driver for more flexible configuration
 
 Version 3.4
 -----------
