--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -30,6 +30,7 @@ Version 3.5
 - WBW: Refactor UART driver for more flexible configuration
 - M?R: Added hour/minute/second display to timer app
 - WBW: Substantial customization of NZ-COM disk image
+- WBW: Refactor build post-processing (ZRC, ZZRCC, etc.)
 
 Version 3.4
 -----------
