--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -33,6 +33,7 @@ Version 3.5
 - WBW: Refactor build post-processing (ZRC, ZZRCC, etc.)
 - MAP: Improved section Real Time Clock in User Guide document
 - WBW: Support for Hitachi HD44780-based LCD display
+- MAP: Improved section Disk Managment in User Guide document
 
 Version 3.4
 -----------
