--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -32,8 +32,7 @@ Version 3.5
 - WBW: Substantial customization of NZ-COM disk image
 - WBW: Refactor build post-processing (ZRC, ZZRCC, etc.)
 - MAP: Improved section Real Time Clock in User Guide document
-- WBW: Support for Hitachi HD44780-based LCD display
-- DRJ: Added support for Genesis STD Bus Z180 platform
+- WBW: Support for Hitachi HD44780-based LCD display
 
 Version 3.4
 -----------
