--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -35,6 +35,8 @@ Version 3.5
 - WBW: Support for Hitachi HD44780-based LCD display
 - DRJ: Added support for Genesis STD Bus Z180 platform
 - MAP: Improved section Disk Management in User Guide document
+- WBW: Add CPU speed selection for HEATH platform to HBIOS
+- WBW: Add Warm/Cold reboot options to CPUSPD utility
 
 Version 3.4
 -----------
