--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -39,6 +39,7 @@ Version 3.5
 - WBW: Add Warm/Cold reboot options to CPUSPD utility
 - D?N: Added support for eZ80 CPU
 - MAP: Contributed COPYSL utility
+- MAP: Added new HBIOS function SYSGET_DIOMED
 
 Version 3.4
 -----------
