--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -40,6 +40,7 @@ Version 3.5
 - D?N: Added support for eZ80 CPU
 - MAP: Contributed COPYSL utility
 - MAP: Added new HBIOS function SYSGET_DIOMED
+- MAP: ROMLDR now uses SYSGET_DIOMED to get Slice Sector for boot
 
 Version 3.4
 -----------
