--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -45,6 +45,7 @@ Version 3.5
 - MAP: CPM3 Boot Loader, and BIOS (drive select) now use EXT_SLICE
 - M?R: Added REBOOT application
 - MAP: Significant improvement in Disk Catalog document
+- MAP: Added Disk Image for the Z3PLUS (Z-System for CP/M-Plus) os.
 
 Version 3.4
 -----------
