--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -46,6 +46,7 @@ Version 3.5
 - M?R: Added REBOOT application
 - MAP: Significant improvement in Disk Catalog document
 - MAP: Added Disk Image for the Z3PLUS (Z-System for CP/M-Plus) os.
+- H?H: Fix XModem 12.3 WRERR to put CAN char in proper register to send.
 
 Version 3.4
 -----------
