--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -48,6 +48,7 @@ Version 3.5
 - MAP: Added Disk Image for the Z3PLUS (Z-System for CP/M-Plus) os.
 - H?H: Fix XModem 12.3 WRERR to put CAN char in proper register to send.
 - MAP: Initial NVRAM configuration infrastructure, and boot device selection.
+- MAP: Added additional tools (Linker/Disasembler) to the Z80ASM Disk Image
 
 Version 3.4
 -----------
