--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -49,6 +49,8 @@ Version 3.5
 - H?H: Fix XModem 12.3 WRERR to put CAN char in proper register to send.
 - MAP: Initial NVRAM configuration infrastructure, and boot device selection.
 - MAP: Added additional tools (Linker/Disasembler) to the Z80ASM Disk Image
+- PMS: Support interrupt-driven PS2 Keyboard Interface
+- D?M: Added NetBoot support for Duodyne
 
 Version 3.4
 -----------
