--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -51,6 +51,7 @@ Version 3.5
 - MAP: Added additional tools (Linker/Disasembler) to the Z80ASM Disk Image
 - PMS: Support interrupt-driven PS2 Keyboard Interface
 - D?M: Added NetBoot support for Duodyne
+- WBW: Add options to TUNE/HBIOS to force detection of MSX and RC AY/YM standard PSG ports
 
 Version 3.4
 -----------
