Refactor ZMP Overlay
- ZMP was crashing in most scenarios.  This was corrected.
- Minor adjustments to ZMP usage
- Added ZMP documentation

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -4,6 +4,7 @@ Version 3.5.1
 - MAP: Enhanced SLR Tools Disk Image with Plus versions
 - WBW: Add missing BCLOAD file to MS BASIC Compiler Disk Image (reported by Marshall Gates)
 - WBW: Doc improvements (per Fraser and Rob Gowin)
+- WBW: Correct ZMP application crash
 
 Version 3.5
 -----------
