Reorganise content in Chapter 1 into multiple tables, with very minor corrections. also added UNA_std.rom into these summary tables as it was missing.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -6,6 +6,7 @@ Version 3.5.1
 - WBW: Doc improvements (per Fraser and Rob Gowin)
 - WBW: Correct ZMP application crash
 - MAP: Contribution of the SLABEL.COM tool for displaying and changing slice labels.
+- MAP: Hardware documentation, Significant new content added with project links.
 
 Version 3.5
 -----------
