--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -1,6 +1,7 @@
-
 Version 3.6
 -----------
+- MGG: Added COBOL language disk image
+- WDC: Added config options to PCF driver
 
 Version 3.5.1
 -------------
