--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -4,6 +4,7 @@ Version 3.6
 - WDC: Added config options to PCF driver
 - WBW: Enabled dynamic CPU speed update on LCD screen
 - WBW: Improve LPT driver boot messaging when not detected (per Robb Bates)
+- WBW: Correct DS1307 boot date/time display (per Tadeusz Pycio)
 
 Version 3.5.1
 -------------
