--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -5,6 +5,7 @@ Version 3.6
 - WBW: Enabled dynamic CPU speed update on LCD screen
 - WBW: Improve LPT driver boot messaging when not detected (per Robb Bates)
 - WBW: Correct DS1307 boot date/time display (per Tadeusz Pycio)
+- WBW: Add -DELAY option to TUNE app (per Robb Bates)
 
 Version 3.5.1
 -------------
