Add Bounds Check to md.asm, Issue #560
Added checks to prevent HBIOS API read/write calls from access RAM or ROM banks outside of the banks allocated for RAM/ROM disk.

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -8,6 +8,7 @@ Version 3.6
 - WBW: Add -DELAY option to TUNE app (per Robb Bates)
 - R?G: Add online documentation site
 - WBW: Added enhanced Hi-Tech C Compiler files from Ladislau Szilagyi
+- WBW: Added boundary check to ram/rom disk driver
 
 Version 3.5.1
 -------------
