KERMIT File Mode Default to Binary
KERMIT (for CP/M 2.2 and 3) was originally using a file transfer mode called "DEFAULT".  This mode tried to accommodate binary or ASCII files, but could result in file corruption.  As suggested by @PeterOGB, the BINARY setting is much safer.  This is now the built-in default setting.

Co-Authored-By: PeterOGB <7755057+PeterOGB@users.noreply.github.com>

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -10,6 +10,7 @@ Version 3.6
 - RDG: Add online documentation site
 - WBW: Added enhanced Hi-Tech C Compiler files from Ladislau Szilagyi
 - WBW: Added boundary check to ram/rom disk driver
+- WBW: Per Peter Onion, switch KERMIT default file xfer mode to binary
 
 Version 3.5.1
 -------------
