--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -11,6 +11,7 @@ Version 3.6
 - WBW: Added enhanced Hi-Tech C Compiler files from Ladislau Szilagyi
 - WBW: Added boundary check to ram/rom disk driver
 - WBW: Per Peter Onion, switch KERMIT default file xfer mode to binary
+- J?L: Source for ZSDOS2 and BPBIOS Utilities (from disassembly)
 
 Version 3.5.1
 -------------
