--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -12,6 +12,7 @@ Version 3.6
 - WBW: Added boundary check to ram/rom disk driver
 - WBW: Per Peter Onion, switch KERMIT default file xfer mode to binary
 - J?L: Source for ZSDOS2 and BPBIOS Utilities (from disassembly)
+- WBW: Support ROM-based font storage
 
 Version 3.5.1
 -------------
