--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -14,6 +14,7 @@ Version 3.6
 - J?L: Source for ZSDOS2 and BPBIOS Utilities (from disassembly)
 - WBW: Support ROM-based font storage
 - MAP: New Slice Inventory Rom App "S" display bootable slices, during boot
+- MAP: Device Inventory moved from HBIOS to Rom App, saving >1k space in HBIOS
 
 Version 3.5.1
 -------------
