--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -16,6 +16,7 @@ Version 3.6
 - MAP: New Slice Inventory Rom App "S" display bootable slices, during boot
 - MAP: Device Inventory moved from HBIOS to Rom App, saving >1k space in HBIOS
 - MAP: Added disk image for all Infocom text adventure Games
+- M?R: Fixed formatting issue with SLABEL where Slice # < 10
 
 Version 3.5.1
 -------------
