--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -19,6 +19,7 @@ Version 3.6
 - M?R: Fixed formatting issue with SLABEL where Slice # < 10
 - WBW: Improved image creation process to allow user defined aggregates
 - WBW: Implemented config driven slice name and system image specification
+- D?N: Added native USB driver support (keyboard, floppy, mass storage)
 
 Version 3.5.1
 -------------
