--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -21,6 +21,7 @@ Version 3.6
 - WBW: Implemented config driven slice name and system image specification
 - D?N: Added native USB driver support (keyboard, floppy, mass storage)
 - MGG: Added sample program source files for all language disk iamges
+- WBW: Added support for S100 Dual CF Interface
 
 Version 3.5.1
 -------------
