--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -24,6 +24,7 @@ Version 3.6
 - WBW: Added support for S100 Dual CF Interface
 - WBW: Added support for S100 ESP32 SD Interface
 - MAP: User guide. Reorder sections around disk formatting
+- R?M: Randy Merkel provided ZSDOS Programmer's Manual as translated by Wayne Hortensius
 
 Version 3.5.1
 -------------
