--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -26,6 +26,7 @@ Version 3.6
 - MAP: User guide. Reorder sections around disk formatting
 - R?M: Randy Merkel provided ZSDOS Programmer's Manual as translated by Wayne Hortensius
 - WBW: Updated Cowgol disk image with latest COWFIX.COM from Ladislau Szilagyi
+- WBW: Preliminary support for S100 Computers Z80 CPU
 
 Version 3.5.1
 -------------
