--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -27,6 +27,7 @@ Version 3.6
 - R?M: Randy Merkel provided ZSDOS Programmer's Manual as translated by Wayne Hortensius
 - WBW: Updated Cowgol disk image with latest COWFIX.COM from Ladislau Szilagyi
 - WBW: Preliminary support for S100 Computers Z80 CPU
+- HJB: Added MSX platform
 
 Version 3.5.1
 -------------
