--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -29,6 +29,7 @@ Version 3.6
 - WBW: Preliminary support for S100 Computers Z80 CPU
 - HJB: Added MSX platform
 - M?R: Update Timer app with "zero" option
+- HJB: Update PPIDE driver, add support for MSX BEER IDE interface
 
 Version 3.5.1
 -------------
