--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -30,6 +30,7 @@ Version 3.6
 - HJB: Added MSX platform
 - M?R: Update Timer app with "zero" option
 - HJB: Update PPIDE driver, add support for MSX BEER IDE interface
+- HJB: Added loader for MSX
 
 Version 3.5.1
 -------------
