--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -32,6 +32,7 @@ Version 3.6
 - HJB: Update PPIDE driver, add support for MSX BEER IDE interface
 - HJB: Added loader for MSX
 - HJB: Added IDE driver master media detect option
+- WBW: Add support for S100 Serial I/O DLP Serial connection
 
 Version 3.5.1
 -------------
