--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -33,6 +33,7 @@ Version 3.6
 - HJB: Added loader for MSX
 - HJB: Added IDE driver master media detect option
 - WBW: Add support for S100 Serial I/O DLP Serial connection
+- P?D: Generate compressed ROM for EaZyZ80 512
 
 Version 3.5.1
 -------------
