VGMINFO Build Integration

--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -34,7 +34,8 @@ Version 3.6
 - HJB: Added IDE driver master media detect option
 - WBW: Add support for S100 Serial I/O DLP Serial connection
 - P?D: Generate compressed ROM for EaZyZ80 512
-- DDW: Added support for the 'N8PC' platform. Includes support for the M6242 RTC chip.
+- DDW: Added support for the 'N8PC' platform. Includes support for the M6242 RTC chip
+- JMD: Added VGMINFO application
 
 Version 3.5.1
 -------------
