--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -37,6 +37,7 @@ Version 3.6
 - DDW: Added support for the 'N8PC' platform. Includes support for the M6242 RTC chip
 - JMD: Added VGMINFO application
 - WBW: Created SCSI Driver derived from code from Jay Cotton
+- WBW: Add official RC2014 platform (derived from RCZ80)
 
 Version 3.5.1
 -------------
