--- a/Doc/ChangeLog.txt
+++ b/Doc/ChangeLog.txt
@@ -40,6 +40,7 @@ Version 3.6
 - WBW: Add official RC2014 platform (derived from RCZ80)
 - D?N: Added improved TMS Driver hardware/configuration detection and reporting
 - WBW: Removed driver module INIT lists, replaced with init phase system
+- JMD: Support Coleco AY-3-8910 ports in TUNE and HBIOS
 
 Version 3.5.1
 -------------
